Revision history for SPVM

0.9117  2021-01-12
        [CHANGES]
        * ar file don't contains static link files.
        * ar file don't contains SPVM module object file.

0.9116  2021-01-11
        [FIX BUGS]
        * Fix the bugs that C++ code can't be compiled
        [CHANGES]
        * Add "ext" field of SPVM::Builder::Config again for the SPVM native source extension.

0.9115  2021-01-11
        [NON BACKWORD COMPATIBLE CHANGES]
        * Revert most of 0.9114 Changes
          
          Revert: Add file, file_optional, native_include_dir,
          native_src_dir native_lib_dir, native_bin_dir
          fields to SPVM::Builder::Config.
          
          Revert: Need file field new, new_c, new_c99, new_cpp, new_cpp11 of SPVM::Builder::Config
          
0.9114  2021-01-10
        [FIX BUGS]
        * new_c, new_c99, new_cpp, new_cpp11 of SPVM::Builder::Config pass
          arguments to new of SPVM::Builder::Config.
        [CHANGES]
        * Add file, file_optional, native_include_dir,
          native_src_dir native_lib_dir, native_bin_dir
          fields to SPVM::Builder::Config.
        [NON BACKWORD COMPATIBLE CHANGES]
        * Need file field new, new_c, new_c99, new_cpp, new_cpp11 of SPVM::Builder::Config
          [Now Runtime Exception]
          my $config = SPVM::Config->new;
          
          [New Code]
          my $config = SPVM::Config->new(file => __FILE__);

0.9113  2021-01-09
        [CHANGES]
        * Add "use" method to SPVM::Builder::Config. This method is the alias for "add_resources".
        * Remove "ext" field of SPVM::Builder::Config because source files was needed to be specifed.
        * Need Test::More 0.92+ to do tests.
        * Rename sources field of SPVM::Builder::Config to source_files.
        * Rename add_sources method of SPVM::Builder::Config to add_source_files.
        
0.9112  2021-01-07
        [BUGS]
        * Fix a unweaken memory leak bug.
        
0.9111  2021-01-07
        [CHANGES]